--- a/AzWebTest/Pages/Index.cshtml
+++ b/AzWebTest/Pages/Index.cshtml
@@ -8,3 +8,28 @@
     <h5 class="display-4">Welcome To AzWebTest</h5>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<br/>
+<div class="text-center">
+    <h5 class="display-4">This is a list of products</h5>
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th scope="col">Product ID</th>
+                <th scope="col">Product Name</th>
+                <th scope="col">Quantity</th>
+            </tr>
+        </thead>
+        <tbody>
+
+            @foreach (var product in Model.ProductList)
+            {
+                <tr>
+                    <th scope="row">@product.ProductID</th>
+                    <td>@product.ProductName</td>
+                    <td>@product.Quantiy.ToString()</td>
+                </tr>
+            }
+
+        </tbody>
+    </table>
+</div>
